--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,8 +19,8 @@ body {
 .progressbar {
   position: relative;
   width: 492px;
-  border: 1px solid green;
-  padding: 3px;
+  border: 3px solid green;
+  padding: 5px;
   margin: 2px 0px;
 }
 
@@ -120,7 +120,7 @@ body {
 
 .sorter > .text {
   width: 120px;
-  height: 60px;
+  height: 30px;
   display: none;
 }
 
@@ -134,12 +134,12 @@ body {
 
 .sorter > .left {
   grid-column: 1 / 2;
-  border: 1px solid #000000;
+  border: 3px solid #3388BB;
 }
 
 .sorter > .right {
   grid-column: 3 / 4;
-  border: 1px solid #000000;
+  border: 3px solid #881144;
 }
 
 .options {
@@ -212,8 +212,8 @@ label:hover {
   margin-bottom: -1px;
   display: grid;
   width: 211px;
-  grid-template-columns: repeat(2, 1fr);
-  border: 1px solid #000;
+  grid-template-columns: repeat(6, 1fr);
+  border: 2px solid #3388BB;
   margin-right: 5px;
 }
 
