--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,6 +50,7 @@ body {
   border: 1px solid black;
   text-align: center;
   padding: 10%;
+  margin: 20px auto;
   grid-column: 2 / 3;
   cursor: pointer;
 }
