--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,7 @@ body {
   position: relative;
   width: 492px;
   border: 3px solid green;
+  border-radius: 10px
   padding: 5px;
   margin: 2px 0px;
 }
@@ -48,6 +49,7 @@ body {
 
 .button {
   border: 1px solid black;
+  border-radius: 10px
   text-align: center;
   padding: 10%;
   margin: 5px auto;
