--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,7 +48,7 @@ body {
 }
 
 .button {
-  border: 1px solid black;
+  border: none;
   border-radius: 10px;
   background-color: #779977;
   color: white;
@@ -133,19 +133,20 @@ body {
   margin: 0.5em 5px 0px;
   width: calc(100%-10px);
   text-align: center;
+  color: white;
   font-size: 0.8em;
   line-height: 1.5em;
 }
 
 .sorter > .left {
   grid-column: 1 / 2;
-  border: 2px solid #3388BB;
+  border: none;
   background-color: #3388BB;
 }
 
 .sorter > .right {
   grid-column: 3 / 4;
-  border: 2px solid #881144;
+  border: none;
   background-color: #881144;
 }
 
