--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -221,12 +221,13 @@ label:hover {
   display: grid;
   width: 211px;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center;
   border: 2px solid #000;
   margin-right: 5px;
 }
 
 .result.image {
-  height: 175px;
+  height: 190px;
 }
 
 .result.image img {
